@@ -4,7 +4,8 @@ Released 2.4.42 2017-08-xx
 Changes since 2.4.41:
 
 Lib/
-* 
+* added new SlapdObject methods _ln_schema_files() and
+  _create_sub_dirs()
 
 ----------------------------------------------------------------
 Released 2.4.41 2017-07-12
@@ -1468,4 +1469,4 @@ Released 2.0.0pre02 2002-02-01
 ----------------------------------------------------------------
 Released 1.10alpha3 2000-09-19
 
-$Id: CHANGES,v 1.453 2017/08/03 17:24:43 stroeder Exp $
+$Id: CHANGES,v 1.454 2017/08/03 17:26:59 stroeder Exp $
